--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blogger-mcp-server-fixed",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Working MCP Server for Blogger API",
   "main": "dist/index.js",
   "bin": {
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "googleapis": "^128.0.0"
+    "googleapis": "^128.0.0",
+    "express": "^4.19.0",
+    "open": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/express": "^4.17.0",
     "typescript": "^5.3.3",
     "ts-node": "^10.9.2"
   },
